include_directories(trx svxlink)

option(WITH_SYSTEMD "Set to ON to include systemd support" ON)
if(WITH_SYSTEMD)
  add_subdirectory(systemd)
endif(WITH_SYSTEMD)
message(STATUS "WITH_SYSTEMD = ${WITH_SYSTEMD}")

add_subdirectory(trx)
add_subdirectory(svxlink)
add_subdirectory(modules)
#add_subdirectory(scripts)
add_subdirectory(remotetrx)
add_subdirectory(siglevdetcal)
add_subdirectory(devcal)
add_subdirectory(svxserver)